Bug 16038 - Samba 4.24 with cups can't get queue and shows errors about fetch_share_cache_time
Summary: Samba 4.24 with cups can't get queue and shows errors about fetch_share_cache...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.24.0
Hardware: All All
: P5 regression (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-21 23:08 UTC by Flole
Modified: 2026-05-22 14:39 UTC (History)
3 users (show)

See Also:


Attachments
patch from master for v4-24-test (2.43 KB, patch)
2026-04-10 06:47 UTC, Anoop C S
gd: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Flole 2026-03-21 23:08:00 UTC
After updating to samba 4.24 my print jobs are no longer disappearing from the printing queue on the clients when they are done. Additionally, whenever a client refreshes the printing queue (or even the printer list) I see this:

2026-03-21T23:59:02.956091+01:00 Samba-Server rpcd_spoolss[1831070]: [2026/03/21 23:59:02.953448,  0] source3/printing/printing.c:71(fetch_share_cache_time)
2026-03-21T23:59:02.956158+01:00 Samba-Server rpcd_spoolss[1831070]:   fetch_share_cache_time: No timing record found for[My_Printer_Share]!
2026-03-21T23:59:02.956247+01:00 Samba-Server rpcd_spoolss[1831070]: [2026/03/21 23:59:02.953466,  0] source3/printing/printing.c:1273(print_cache_expired)
2026-03-21T23:59:02.956387+01:00 Samba-Server rpcd_spoolss[1831070]:   print_cache_expired: Unable to get last scan timing for My_Printer_Share

I have checked the tdb files, deleted them so they are automatically re-created but they stay empty. Raising the debug level to 10 shows nothing that is not shown in the default debug level. To me this looks like it is never attempting/managing to actually pull the data from cups. I also tried setting lpq cache time = 0 but that doesn't change anything.

No idea how I can do additional troubleshooting or what other info to provide, I can't believe I am the only one seeing this but it looks like it was never reported anywhere before.
Comment 1 Guenther Deschner 2026-03-23 16:10:52 UTC
This is going to be resolved in this MR: https://gitlab.com/samba-team/samba/-/merge_requests/4462
Comment 2 Flole 2026-03-23 20:18:46 UTC
Thanks! One thing I am not sure about, did the naming also change? In the old tdb that I deleted there were entries called "CACHE/$Printer_name\00" and still the message was logged. I also tried to manually create those with tdbtool (transaction_start, insert CACHE/$Printer_name\00 \00\00\00\00, transaction_commit) but the errors logged are exactly the same? Am I missing something or is there maybe something else that's also broken? I think by creating those entries manually the messages should disappear?
Comment 3 Samba QA Contact 2026-04-08 16:47:03 UTC
This bug was referenced in samba master:

f3b1ce2f372d6d118df9f7fdaaae7e8db7759af9
Comment 4 Anoop C S 2026-04-10 06:47:37 UTC
Created attachment 18942 [details]
patch from master for v4-24-test
Comment 5 Guenther Deschner 2026-04-17 10:20:28 UTC
Comment on attachment 18942 [details]
patch from master for v4-24-test

LGTM, RB+
Comment 6 Guenther Deschner 2026-04-17 10:21:09 UTC
Björn, please add to next 4.24.x release
Comment 7 Flole 2026-05-09 15:58:10 UTC
Has this been added to the next 4.24.x release? I can't find the commit in the 4.24 branches.
Comment 8 Samba QA Contact 2026-05-12 14:58:01 UTC
This bug was referenced in samba v4-24-test:

44db581bb24b59085de56a7d8ba37eefaf1bee23
Comment 9 Samba QA Contact 2026-05-12 15:55:38 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.2):

44db581bb24b59085de56a7d8ba37eefaf1bee23
Comment 10 Flole 2026-05-22 14:39:50 UTC
I can confirm that it is fixed. Thanks!