printing: Set default value in case of non-exisiting record

This fixes regression caused by commit#e9a7dce599
Newly added function treats non-existing record as error, instead of
setting just -1 i.e. default value for non-exisiting record for
printing subsystem. This results into print_cache_expired returning
incorrect status.

Fix sets default value in case of non-exisiting record
which would ensure print_cache_expired to return correct status.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=16038

Signed-off-by: Vinit Agnihotri <vagnihot@redhat.com>
Reviewed-by: Rabinarayan Panigrahi <rapanigr@redhat.com>
Reviewed-by: Avan Thakkar <athakkar@redhat.com>
Reviewed-by: Xavi Hernandez <xhernandez@redhat.com>
Reviewed-by: Anoop C S <anoopcs@samba.org>
Reviewed-by: Guenther Deschner <gd@samba.org>
(cherry picked from commit f3b1ce2f372d6d118df9f7fdaaae7e8db7759af9)